# lance

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: lance.hpp
engine/include/core/: window.hpp
engine/include/core/rendering/: gfx.hpp  material.hpp  mesh.hpp  shader.hpp
engine/include/core/utils/: log.cpp  log.hpp
engine/include/entity/: component_storage.hpp  entity.hpp  registry.hpp
engine/include/entity/components/: material_component.hpp  mesh_component.hpp  transform_component.hpp
engine/include/entity/components/systems/: render_system.hpp  transform_system.hpp
engine/include/renderers/: entity_renderer.hpp  ui_renderer.hpp  world_renderer.hpp
engine/include/systems/: transform_system.hpp
engine/src/: lance.cpp
engine/src/core/: window.cpp
engine/src/core/rendering/: gfx.cpp  material.cpp  mesh.cpp  shader.cpp
engine/src/entity/components/systems/: render_system.cpp  transform_system.cpp
engine/src/systems/: render_system.cpp  transform_system.cpp
game/: CMakeLists.txt
game/src/: main.cpp
